重构: Road类修改为纪录类，A*算法添加注释及提取部分方法。